--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -6,47 +6,47 @@
 
 /* Header */
 #header {
-	@include vendor('display', 'flex');
-	position: relative;
-	border-bottom: solid 5px transparent; // Initially set to transparent to hide the border.
+    @include vendor('display', 'flex');
+    position: relative;
+    border-bottom: solid 5px transparent; // Initially set to transparent to hide the border.
 
-	> * {
-		@include vendor('flex', '1');
-		margin-bottom: 0;
-	}
+    > * {
+        @include vendor('flex', '1');
+        margin-bottom: 0;
+    }
 
-	.logo {
-		border-bottom: 0;
-		color: inherit;
-		font-family: _font(family-heading);
-		font-size: 1.125em;
-		text-align: center;
-	}
+    .logo {
+        border-bottom: 0;
+        color: inherit;
+        font-family: _font(family-heading);
+        font-size: 1.125em;
+        text-align: center;
+    }
 
-	.icons {
-		text-align: right;
-	}
+    .icons {
+        text-align: right;
+    }
 
-	@include breakpoint('<=xlarge') {
-		padding-top: 5em;
-	}
+    @include breakpoint('<=xlarge') {
+        padding-top: 5em;
+    }
 
-	@include breakpoint('<=small') {
-		padding-top: 6.5em;
+    @include breakpoint('<=small') {
+        padding-top: 6.5em;
 
-		.logo {
-			font-size: 1.25em;
-			margin: 0;
-		}
+        .logo {
+            font-size: 1.25em;
+            margin: 0;
+        }
 
-		.icons {
-			height: (6.25em / 1.25);
-			line-height: (6.25em / 1.25);
-			position: absolute;
-			right: (-0.625em / 1.25);
-			top: 0;
-		}
-	}
+        .icons {
+            height: (6.25em / 1.25);
+            line-height: (6.25em / 1.25);
+            position: absolute;
+            right: (-0.625em / 1.25);
+            top: 0;
+        }
+    }
 
     &::after {
         content: '';
@@ -60,28 +60,30 @@
         will-change: transform;
         transform: translateZ(0);
         transition: none; // Ensure no transition interferes before animation
+        animation: growBorder2 3s ease-out forwards;
+        animation-play-state: paused; /* Pause by default */
     }
 
     &.animate::after {
-        animation: growBorder2 3s ease-out forwards;
+        animation-play-state: running;
     }
 }
 
 @keyframes growBorder2 {
-	from {
-		width: 0;
-		left: 50%;
-	}
-	to {
-		width: 100%;
-		left: 0;
-	}
+    from {
+        width: 0;
+        left: 50%;
+    }
+    to {
+        width: 100%;
+        left: 0;
+    }
 }
 
 .social-icons {
-	padding-top: 1.5rem;
-	@include vendor('display', 'flex');
-	justify-content: right;
-	color: #D8DEE9; // Snow Storm
-	margin-bottom: 0px;
+    padding-top: 1.5rem;
+    @include vendor('display', 'flex');
+    justify-content: right;
+    color: #D8DEE9; // Snow Storm
+    margin-bottom: 0px;
 }
