--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1715,7 +1715,6 @@ img {
 .image.image-placeholder {
   position: relative;
   display: inline-block;
-  /* Animation plays when 'animate' class is added */
 }
 .image.image-placeholder img {
   display: block;
@@ -1727,8 +1726,7 @@ img {
   content: "";
   position: absolute;
   border: 6px solid #FF8484;
-  animation: growBorder 3s ease-out forwards;
-  animation-fill-mode: forwards;
+  animation: none;
   visibility: visible;
   will-change: transform;
   transform: translateZ(0);
@@ -1750,7 +1748,12 @@ img {
   border-top: none;
 }
 .image.image-placeholder.animate::before, .image.image-placeholder.animate::after {
+  animation: growBorder 3s ease-out forwards;
   animation-play-state: running;
+}
+.image.image-placeholder.done::before, .image.image-placeholder.done::after {
+  width: 25%;
+  height: 35%;
 }
 .image.image-placeholder .image-caption {
   font-variant: small-caps;
@@ -3005,14 +3008,16 @@ button.sidebar-button {
   height: 5px;
   background-color: #FF8484;
   visibility: visible;
-  will-change: transform;
   transform: translateZ(0);
-  transition: none;
-  animation: growBorder2 3s ease-out forwards;
-  animation-play-state: paused; /* Pause by default */
+  animation: none;
 }
 #header.animate::after {
-  animation-play-state: running;
+  animation: growBorder2 3s ease-out forwards;
+}
+#header.done::after {
+  width: 100%;
+  left: 0;
+  background-color: #FF8484;
 }
 
 @keyframes growBorder2 {
