--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -44,63 +44,66 @@ img {
 }
 
 .image.image-placeholder {
-  position: relative;
-  display: inline-block;
-
-  img {
-    display: block;
-    width: 100%;
-    height: auto;
     position: relative;
+    display: inline-block;
+  
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+  
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      border: 6px solid _palette(accent);
+      animation: none; // No animation by default
+      visibility: visible;
+      will-change: transform;
+      transform: translateZ(0);
+    }
+  
+    &::before {
+      top: -6px;
+      left: -6px;
+      width: 0;
+      height: 0;
+      border-right: none;
+      border-bottom: none;
+    }
+  
+    &::after {
+      bottom: -6px;
+      right: -6px;
+      width: 0;
+      height: 0;
+      border-left: none;
+      border-top: none;
+    }
+  
+    &.animate::before,
+    &.animate::after {
+      animation: growBorder 3s ease-out forwards;
+      animation-play-state: running;
+    }
+  
+    &.done::before,
+    &.done::after {
+      width: 25%;
+      height: 35%;
+    }
+  
+    .image-caption {
+      font-variant: small-caps;
+      text-align: center;
+      margin-top: 0.5em;
+      font-size: 1.2em;
+      color: _palette(fg-light);
+      margin: 0.5em;
+    }
   }
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    border: 6px solid _palette(accent);
-    animation: growBorder 3s ease-out forwards;
-    animation-fill-mode: forwards; // Keeps the CSS values from the last keyframe after the animation ends
-    visibility: visible; // Prevents visibility toggling that can reset animations
-    will-change: transform; // Optimizes performance, hinting to the browser the element will transform
-    transform: translateZ(
-      0
-    ); // Promotes layering in GPU, can improve performance and prevent re-animation
-  }
-
-  &::before {
-    top: -6px;
-    left: -6px;
-    width: 0;
-    height: 0;
-    border-right: none;
-    border-bottom: none;
-  }
-
-  &::after {
-    bottom: -6px;
-    right: -6px;
-    width: 0;
-    height: 0;
-    border-left: none;
-    border-top: none;
-  }
-
-  /* Animation plays when 'animate' class is added */
-  &.animate::before,
-  &.animate::after {
-    animation-play-state: running;
-  }
-
-  .image-caption {
-    font-variant: small-caps;
-    text-align: center;
-    margin-top: 0.5em;
-    font-size: 1.2em;
-    color: _palette(fg-light);
-    margin: 0.5em;
-  }
-}
 
 @keyframes growBorder {
   to {
