--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2817,9 +2817,9 @@ button.sidebar-button {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   border: 0;
   display: block;
-  height: 7.5em;
+  height: 4.5em;
   left: 26em;
-  line-height: 7.5em;
+  line-height: 4.5em;
   outline: 0;
   overflow: hidden;
   position: absolute;
@@ -2827,9 +2827,11 @@ button.sidebar-button {
   text-indent: -15em;
   white-space: nowrap;
   top: 0;
-  width: 6em;
+  width: 5em;
   z-index: 10000;
   color: #B0B8C5;
+  background-color: #2B2D3E;
+  border-radius: 1em 1em 1em 1em;
 }
 #sidebar .toggle:before {
   -moz-osx-font-smoothing: grayscale;
