--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -88,9 +88,9 @@
 			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 			border: 0;
 			display: block;
-			height: 7.5em;
+			height: 4.5em;
 			left: _size(sidebar-width);
-			line-height: 7.5em;
+			line-height: 4.5em;
 			outline: 0;
 			overflow: hidden;
 			position: absolute;
@@ -98,9 +98,12 @@
 			text-indent: -15em;
 			white-space: nowrap;
 			top: 0;
-			width: 6em;
+			width: 5em;
 			z-index: _misc(z-index-base);
 			color: _palette(fg); // Set default color to foreground
+			background-color:_palette(bg);
+			// radius for corners
+			border-radius: 1em 1em 1em 1em;
 	
 			&:before {
 				content: '\f0c9';
